removed java 7 setting for permgen, no longer applies with Java 8