@@ -1,2 +1,1 @@
 -Xmx8192m
--XX:MaxPermSize=256m
